highlighter issue. layout overflowing

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -227,7 +227,7 @@
     }
 
     .features-container {
-        margin-top: 40vh;
+        margin-top: 200px;
         height: max-content;
         display: flex;
         flex-direction: column;
@@ -589,7 +589,7 @@
     }
 
     .faq-container {
-        margin-top: 20vh;
+        margin-top: 120px;
         height: max-content;
         display: flex;
         justify-content: center;
@@ -677,7 +677,6 @@
 
     footer {
         width: 100%;
-        height: 30vh;
         margin-top: 150px;
         position: relative;
     }
@@ -969,12 +968,13 @@
     }
 
     .features-container {
-        margin-top: 40vh;
+        margin-top: 250px;
         height: max-content;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        background-color: transparent;
     }
 
     .ai-analysis,
@@ -1412,7 +1412,7 @@
     }
 
     .faq-container {
-        margin-top: 20vh;
+        margin-top: 120px;
         height: max-content;
         display: flex;
         justify-content: center;
@@ -1500,7 +1500,6 @@
 
     footer {
         width: 100%;
-        height: 30vh;
         margin-top: 150px;
     }
 
@@ -1575,7 +1574,7 @@
 @media screen and (min-width:480px) {
 
     .svg {
-        transform: scaleY(-1) scale(1.5);
+        transform: scaleY(-1) scale(2);
     }
 
     .brand-wrapper {
@@ -1587,12 +1586,12 @@
     }
 
     .brand-text {
-        font-size: 16px;
-        width: 70%;
+        font-size: 18px;
+        width: 80%;
     }
 
     .left-container {
-        width: 100%;
+        width: 100svw;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -1600,13 +1599,13 @@
     }
 
     .features-container {
+        margin-top: 300px;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
         transform: translateX(center);
         width: 480px;
         height: 400px;
-        background-color: transparent;
         flex-direction: row;
         gap: 20px;
     }
@@ -1669,11 +1668,18 @@
 
 }
 
+@media screen and (min-width: 550px) {
+    .svg {
+        transform: scaleY(-1) scale(1.6);
+    }
+}
+
+
 @media screen and (min-width:768px) {
     .svg {
-        transform: scaleY(-1) scale(1.2);
+        transform: scaleY(-1) scale(1.3);
         top: 100px;
-        left: 40px;
+        left: 100px;
     }
 
     .left-container {
@@ -1747,9 +1753,28 @@
     .price-integer {
         font-size: 18px;
     }
+
+    .pricing-table-mini {
+        display: none;
+    }
+
+    .pricing-table {
+        display: grid;
+    }
 }
 
+@media screen and (min-width: 847px) {
+    .features-container {
+        margin-bottom: 150px;
+    }
+}
 
+@media screen and (min-width: 970px) {
+    .svg {
+        transform: scaleY(-1) scale(1.2);
+        left: 200px;
+    }
+}
 
 
 @media screen and (min-width: 1200px) {
@@ -1882,6 +1907,7 @@
     }
 
     .svg {
+        left: 0;
         top: 0;
         width: 100vw;
         transform: scaleY(-1);
@@ -1899,7 +1925,7 @@
 
     .left-container {
         width: 50%;
-        padding: 50px 50px 0 50px;
+        padding: 0 50px 0 50px;
         height: 100%;
     }
 
@@ -1931,8 +1957,8 @@
     }
 
     .ai-analysis {
-        height: 100%;
-        width: 100%;
+        height: 230px;
+        width: 255px;
         margin-bottom: 0;
         justify-content: center;
         align-items: center;
@@ -1977,8 +2003,8 @@
         grid-column: 2/3;
         grid-row: 1/2;
         border-radius: 10px;
-        height: 100%;
-        width: 100%;
+        height: 230px;
+        width: 255px;
         margin-bottom: 0;
     }
 
@@ -2023,8 +2049,8 @@
         grid-column: 1/2;
         grid-row: 2/3;
         border-radius: 10px;
-        height: 250px;
-        width: 275px;
+        height: 230px;
+        width: 255px;
         margin-bottom: 0;
     }
 
@@ -2062,7 +2088,7 @@
         background-color: transparent;
         text-align: center;
         height: 50%;
-        width: 75%;
+        width: 80%;
         margin-top: 10px;
     }
 
@@ -2079,8 +2105,8 @@
         grid-row: 2/3;
         border-radius: 10px;
         background-color: #04293a91;
-        height: 250px;
-        width: 275px;
+        height: 230px;
+        width: 255px;
         margin-bottom: 0;
     }
 
@@ -2115,7 +2141,7 @@
         color: #FFFFFF;
         font-size: 18px;
         font-weight: 600;
-        width: 75%;
+        width: 80%;
         text-align: center;
         height: 50%;
         margin-top: 10px;
@@ -2158,8 +2184,8 @@
 
     .billing-selector {
         border-radius: 50px;
-        width: 400px;
-        height: 75px;
+        width: 300px;
+        height: 50px;
         justify-content: space-between;
         margin-bottom: 50px;
     }
@@ -2176,13 +2202,14 @@
     }
 
     .monthly {
-        width: 152px;
+        width: 40%;
         overflow: hidden;
         z-index: 10;
+        font-size: 16px;
         font-weight: 600;
         transition: all 200ms;
         cursor: pointer;
-        margin-left: 8px;
+        margin-left: 5px;
     }
 
     .monthly-inactive {
@@ -2190,11 +2217,13 @@
     }
 
     .yearly {
-        width: 217px;
+        font-size: 16px;
+        width: 60%;
         z-index: 10;
         transition: all 200ms;
         cursor: pointer;
-        margin-right: 8px;
+        margin-right: 5px;
+
     }
 
     .yearly-active {
@@ -2223,18 +2252,19 @@
     }
 
     .highlighter {
-        height: 60px;
-        width: 150px;
+        height: 40px;
+        width: 40%;
         z-index: 0;
-        margin-left: 8px;
+        margin-left: 5px;
     }
 
     .highlighter-active-ml {
-        margin-left: 175px;
+        margin-left: 41%;
+        margin-right: 5px;
     }
 
     .highlighter-active-wh {
-        width: 216px;
+        width: 58%;
     }
 
     .pricing-table-wrapper {
